--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@
             <version>1.7.26</version>
         </dependency>
 
-        <!-- jdbc @TODO: corrigir-->
+        <!-- jdbc -->
         <dependency>
             <groupId>com.oracle</groupId>
             <artifactId>ojdbc6</artifactId>
